5446.	[bug]		The validator could fail to accept a properly signed
			RRset if an unsupported algorithm appeared earlier in
			the DNSKEY RRset than a supported algorithm.  It could
			also stop if it detected a malformed public key.
			[GL #1689]

5445.	[cleanup]	Disable and disallow static linking. [GL #1933]

5444.	[bug]		'rndc dnstap -roll <value>' was not limiting the
			number of saved files to <value>. [GL !3728]

5443.	[bug]		The "primary" and "secondary" keywords, when used
			as parameters for "check-names", were not
			processed correctly and were being ignored. [GL #1949]

5442.	[func]		Add support for outgoing TCP connections in netmgr.
			[GL #1958]

5441.	[placeholder]

5440.	[placeholder]

5439.	[bug]		The dsset returned by dns_keynode_dsset() was not
			thread safe. [GL #1926]

	--- 9.17.2 released ---

5438.	[bug]		Fix a race in TCP accepting code. [GL #1930]

5437.	[bug]		Fix a data race in lib/dns/resolver.c:log_formerr().
			[GL #1808]

5436.	[security]	It was possible to trigger an INSIST when determining
			whether a record would fit into a TCP message buffer.
			(CVE-2020-8618) [GL #1850]

5435.	[tests]		Add RFC 4592 responses examples to the wildcard system
			test. [GL #1718]

5434.	[security]	It was possible to trigger an INSIST in
			lib/dns/rbtdb.c:new_reference() with a particular zone
			content and query patterns. (CVE-2020-8619) [GL #1111]
			[GL #1718]

5433.	[placeholder]

5432.	[bug]		Check the question section when processing AXFR, IXFR,
			and SOA replies when transferring a zone in. [GL #1683]

5431.	[func]		Reject DS records at the zone apex when loading
			master files. Log but otherwise ignore attempts to
			add DS records at the zone apex via UPDATE. [GL #1798]

5430.	[doc]		Update docs - with netmgr, a separate listening socket
			is created for each IPv6 interface (just as with IPv4).
			[GL #1782]

5429.	[cleanup]	Move BIND binaries which are neither daemons nor
			administrative programs to $bindir. [GL #1724]
