@@ -154,7 +154,7 @@ totext_in_apl(ARGS_TOTEXT) {
 			INSIST(prefix <= 32);
 			memset(buf, 0, sizeof(buf));
 			memmove(buf, sr.base, len);
-			RETERR(inet_totext(AF_INET, &ir, target));
+			RETERR(inet_totext(AF_INET, tctx->flags, &ir, target));
 			break;
 
 		case 2:
@@ -162,7 +162,7 @@ totext_in_apl(ARGS_TOTEXT) {
 			INSIST(prefix <= 128);
 			memset(buf, 0, sizeof(buf));
 			memmove(buf, sr.base, len);
-			RETERR(inet_totext(AF_INET6, &ir, target));
+			RETERR(inet_totext(AF_INET6, tctx->flags, &ir, target));
 			break;
 
 		default:
